final aula html

--- a/INDEX.html
+++ b/INDEX.html
@@ -7,11 +7,16 @@
     <title>aulaHTMLDIO</title>
 </head>
 <body>
-    <img src="/AULA HTML/midia/guia-html-38051.png" alt="iconeHTML">
+    <img src="/midia/wordmark.svg.png" alt="iconeHTML" width="250" height="300">
     <h1><b>HTML e suas facetas</b></h1>
-    <header><h2>Quem sou eu</h2></header>
-    <header><h2>Por que devo ser estudado</h2></header>
+    <header>
+        <h2>Quem sou eu</h2>
+    </header>
+    <header>
+        <h2>Por que devo ser estudado</h2>
+    </header>
     <article><h3>O QUE EU SOU</h3><br>
+        <img src="/midia/guia-html-38051.png" alt="img HTML"><br>
         Sigla para HyperText Markup Language — Linguagem de Marcação de Hipertexto —, o HTML é o componente base da web. 
         Isso quer dizer que ele permite a construção de websites e a inserção de novos conteúdos, como imagens e vídeos, p
         or meio dos hipertextos</article>
@@ -25,6 +30,18 @@
           the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
            comes from a line in section 1.10.32.</p>
 
-
+            <footer>
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/in/guilherme-mello-4911941a7/" target="_blank">LinkedInGuilherme/</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/michele-ambrosio-a4899661/" target="_blank">LinkedInMichele</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/gmkr1101/vita" target="_blank">GitHubGuih</a>
+                    </li>
+                </ul>
+            </footer>
 </body>
 </html>
