--- a/INDEX.html
+++ b/INDEX.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aulaHTMLDIO</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <img src="/midia/wordmark.svg.png" alt="iconeHTML" width="250" height="300">
-    <h1><b>HTML e suas facetas</b></h1>
+    <h1 id="title"><b>HTML e suas facetas</b></h1>
     <header>
-        <h2>Quem sou eu</h2>
+        <h2 class="subtitle1">Quem sou eu</h2>
     </header>
     <header>
-        <h2>Por que devo ser estudado</h2>
+        <h2 class="subtitle2">Por que devo ser estudado</h2>
     </header>
-    <article><h3>O QUE EU SOU</h3><br>
+    <article class="subtitle3"><h3>O QUE EU SOU</h3><br>
         <img src="/midia/guia-html-38051.png" alt="img HTML"><br>
         Sigla para HyperText Markup Language — Linguagem de Marcação de Hipertexto —, o HTML é o componente base da web. 
         Isso quer dizer que ele permite a construção de websites e a inserção de novos conteúdos, como imagens e vídeos, p
